--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&display=swap");
 @import "tailwindcss";
 
 @font-face {
@@ -10,4 +11,16 @@ body {
   width: 100%;
   height: 100%;
   font-family: "pricedown";
+}
+
+.relax {
+  font-family: "Caveat", "cursive";
+  font-weight: 700;
+  font: bolder;
+}
+
+.leading-relaxed {
+  font-family: cursive;
+  font-weight: 700;
+  font: bolder;
 }
